--- a/index.html
+++ b/index.html
@@ -13,16 +13,13 @@
 
     <div class="todo-app">
 
-        <h3>To-Do Application <img src="images/1530441-200.png" alt=""></h3>
+
         <div class="row">
-            <input type="text" id="input-box" placeholder="Add your Text">
-            <button onclick=" addTask()">Add Task</button>
+            <input type="text" id="task" placeholder="Add your Text">
+            <button id="addTask">Add Task</button>
 
         </div>
-        <ul id="list-container">
-            <!-- <li class="checked">Task 1</li>
-            <li>Task 1</li>
-            <li>Task 1</li> -->
+        <ul id="list">
 
         </ul>
 
