--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
+    
 
 </head>
 
@@ -17,11 +19,10 @@
         <div class="row">
             <input type="text" id="task" placeholder="Add your Text">
             <button id="addTask">Add Task</button>
+            
 
         </div>
-        <ul id="list">
-
-        </ul>
+        <ul id="list"></ul>
 
     </div>
 
